RESOLVED FIXED28169
REGRESSION: Hang/crash in BytecodeGenerator::constRegisterFor loading simple page
https://bugs.webkit.org/show_bug.cgi?id=28169
Summary REGRESSION: Hang/crash in BytecodeGenerator::constRegisterFor loading simple ...
Timothy Hatcher
Reported 2009-08-10 17:36:34 PDT
Created attachment 34529 [details] Reduction Loading the attached page will produce a hang then eventual crash in BytecodeGenerator::constRegisterFor.
Attachments
Reduction (84 bytes, text/html)
2009-08-10 17:36 PDT, Timothy Hatcher
no flags
Sample (11.25 KB, text/plain)
2009-08-10 17:37 PDT, Timothy Hatcher
no flags
Patch v1 (4.34 KB, patch)
2009-08-11 14:12 PDT, Oliver Hunt
ggaren: review+
Timothy Hatcher
Comment 1 2009-08-10 17:37:23 PDT
Oliver Hunt
Comment 2 2009-08-11 14:12:49 PDT
Created attachment 34591 [details] Patch v1
Geoffrey Garen
Comment 3 2009-08-11 14:26:02 PDT
Comment on attachment 34591 [details] Patch v1 r=me
Oliver Hunt
Comment 4 2009-08-11 14:30:31 PDT
Committed r47062
Note You need to log in before you can comment on or make changes to this bug.