REGRESSION: Hang/crash in BytecodeGenerator::constRegisterFor loading simple page https://bugs.webkit.org/show_bug.cgi?id=28169

Reviewed by Geoff Garen.

Handle the case where someone has attempted to shadow a property
on the global object with a constant.


Canonical link: https://commits.webkit.org/38663@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47062 268f45cc-cd09-0410-ab3c-d52691b4dbfc