LayoutTests/fast/js/resources/const.js
@@ -112,4 +112,9 @@ shouldBe("f()", "f");
 
 shouldBe("const a;", "undefined");
 
+// Make sure we don't override properties placed on the global object
+var ranConstInitialiser = false;
+const bodyId = (ranConstInitialiser = true, "Const initialiser overwrote existing property");
+shouldBe("bodyId", "document.getElementById('bodyId')");
+shouldBeTrue("ranConstInitialiser");
 var successfullyParsed = true;
